--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
-		"build:dev": "vite build --mode development",
+		"build:dev": "vite build --mode development", 
 		"lint": "eslint .",
 		"preview": "vite preview",
 		"convex:dev": "npx convex dev",
@@ -82,5 +82,8 @@
 		"typescript": "^5.8.3",
 		"typescript-eslint": "^8.38.0",
 		"vite": "^5.4.19"
+	},
+	"overrides": {
+		"rollup": "^4.28.0"
 	}
 }
