--- a/server/.env
+++ b/server/.env
@@ -18,9 +18,7 @@ MAX_CONCURRENT_CHECKS=10
 # API Endpoints to Monitor (JSON array)
 API_ENDPOINTS_TO_MONITOR=[]
 
-# WebSocket Configuration
-WS_PORT=3003
-WS_HEARTBEAT_INTERVAL=30000
+# Monitoring Configuration (Polling-based updates)
 
 # Logging Configuration
 LOG_LEVEL=info
