feat: Implement user profile management routes and service integration
- Added user profile routes in `users.ts` for creating, updating, retrieving, and deleting user profiles.
- Integrated `convexService` for user profile operations including fetching user statistics and updating last login timestamps.
- Enhanced error handling with appropriate status codes and messages.
- Updated `convexService.ts` to support user profile operations and improved error handling.
- Refactored monitoring service to improve health check logic and error handling.
- Introduced new user profile schemas in `index.ts` for validation using Zod.

--- a/client/.env
+++ b/client/.env
@@ -3,8 +3,8 @@
 # =============================================================================
 
 # Convex Database Configuration
-CONVEX_DEPLOYMENT=dev:small-fish-210 # team: personal-09bd5, project: pulsemesh-api
-VITE_CONVEX_URL=https://small-fish-210.convex.cloud
+CONVEX_DEPLOYMENT=dev:neat-pelican-290 # team: personal-09bd5, project: pulsemesh-api
+VITE_CONVEX_URL=https://neat-pelican-290.convex.cloud
 
 # Clerk Authentication Configuration
 CLERK_JWT_ISSUER_DOMAIN=https://above-spaniel-92.clerk.accounts.dev
