--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
-		"build:dev": "vite build --mode development", 
+		"build:dev": "vite build --mode development",
 		"lint": "eslint .",
 		"preview": "vite preview",
 		"convex:dev": "npx convex dev",
@@ -71,6 +71,7 @@
 		"@types/node": "^22.16.5",
 		"@types/react": "^18.3.23",
 		"@types/react-dom": "^18.3.7",
+		"@vitejs/plugin-react": "^4.7.0",
 		"@vitejs/plugin-react-swc": "^3.11.0",
 		"autoprefixer": "^10.4.21",
 		"eslint": "^9.32.0",
